@@ -1,7 +1,7 @@
 Package: DPQmpfr
 Title: DPQ (Density, Probability, Quantile) Distribution Computations using MPFR
-Version: 0.3-2
-Date: 2023-12-04
+Version: 0.3-3
+Date: 2024-01-05
 Authors@R: person("Martin","Maechler", role=c("aut","cre"),
    email="maechler@stat.math.ethz.ch", comment = c(ORCID = "0000-0002-8685-9910"))
 Description: An extension to the 'DPQ' package with computations for 'DPQ'
@@ -9,7 +9,7 @@ Description: An extension to the 'DPQ' package with computations for 'DPQ'
   the functions here partly use the 'Rmpfr' package and hence the
   underlying 'MPFR' and 'GMP' C libraries.
 Depends: R (>= 3.6.0)
-Imports: DPQ (>= 0.5-3), Rmpfr (>= 0.9-0), gmp, sfsmisc, stats, graphics, methods, utils
+Imports: DPQ (>= 0.5-3), Rmpfr (>= 0.9-0), gmp (>= 0.6-4), sfsmisc, stats, graphics, methods, utils
 Suggests: Matrix
 SuggestsNote: Matrix for its test-tools-1.R
 License: GPL (>= 2)
